--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -36,10 +36,31 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="Registro"
-        android:text="Button"
+        android:text="Crear Cuenta"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Password" />
+
+    <Button
+        android:id="@+id/buttonIniciar"
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
+        android:text="Iniciar Sesión"
+        app:layout_constraintBottom_toTopOf="@+id/Registrase"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Password" />
+
+    <Button
+        android:id="@+id/buttonRecuperarPass"
+        android:layout_width="346dp"
+        android:layout_height="53dp"
+        android:onClick="RecupearPass"
+        android:text="Recuperar Contraseña"
+        app:layout_constraintBottom_toTopOf="@+id/Registrase"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonIniciar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
