--- a/app/src/main/res/layout/activity_enviar_eventos.xml
+++ b/app/src/main/res/layout/activity_enviar_eventos.xml
@@ -51,8 +51,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editFecha"
-        app:layout_constraintVertical_bias="0.208" />
+        app:layout_constraintTop_toBottomOf="@+id/editUrl"
+        app:layout_constraintVertical_bias="0.182" />
 
     <Button
         android:id="@+id/btnEnviar"
@@ -87,5 +87,17 @@
         app:layout_constraintTop_toBottomOf="@+id/btnSubirFoto"
         app:layout_constraintVertical_bias="0.333"
         tools:srcCompat="@tools:sample/avatars" />
+
+    <EditText
+        android:id="@+id/editUrl"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="URL"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editFecha" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
