--- a/app/src/main/res/layout/evento_view.xml
+++ b/app/src/main/res/layout/evento_view.xml
@@ -1,29 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/textViewEvento"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Titulo"/>
+        android:text="Titulo:"/>
 
     <TextView
         android:id="@+id/textViewDescripcion"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="684dp"
         android:text="Descripcion" />
 
     <TextView
         android:id="@+id/textViewFecha"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="662dp"
         android:text="Fecha" />
+
 
 </RelativeLayout>
 
