--- a/app/src/main/res/layout/activity_acciones_admin.xml
+++ b/app/src/main/res/layout/activity_acciones_admin.xml
@@ -38,4 +38,15 @@
         android:text="Volver"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/btnGestionGastos"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="108dp"
+        android:layout_marginEnd="160dp"
+        android:onClick="GestionGastos"
+        android:text="Gastos"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnCambiarFecha" />
 </androidx.constraintlayout.widget.ConstraintLayout>
