28-03-2020 Implementada la opción de Contacto con todo funcionando.

--- a/app/src/main/res/layout/activity_acciones_admin.xml
+++ b/app/src/main/res/layout/activity_acciones_admin.xml
@@ -49,4 +49,15 @@
         android:text="Gastos"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnCambiarFecha" />
+
+    <Button
+        android:id="@+id/btnMostrarReservas"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="64dp"
+        android:layout_marginEnd="116dp"
+        android:onClick="GestionReservas"
+        android:text="Mostrar Reservas"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnGestionGastos" />
 </androidx.constraintlayout.widget.ConstraintLayout>
