--- a/app/src/main/res/layout/activity_iniciado.xml
+++ b/app/src/main/res/layout/activity_iniciado.xml
@@ -35,6 +35,7 @@
         android:id="@+id/buttonContacta"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="ContactarLink"
         android:text="Contacto"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -106,4 +107,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnMapaInteres"
         app:layout_constraintVertical_bias="0.611" />
+
+    <Button
+        android:id="@+id/btnGaleria"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="56dp"
+        android:layout_marginEnd="128dp"
+        android:onClick="GaleriaLink"
+        android:text="Galeria de fotos"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/textView4" />
 </androidx.constraintlayout.widget.ConstraintLayout>
