--- a/app/src/main/res/layout/activity_acciones_admin.xml
+++ b/app/src/main/res/layout/activity_acciones_admin.xml
@@ -60,4 +60,15 @@
         android:text="Mostrar Reservas"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnGestionGastos" />
+
+    <Button
+        android:id="@+id/btnAddGalery"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="120dp"
+        android:layout_marginEnd="136dp"
+        android:onClick="SendImages"
+        android:text="Subir Imagenes"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnMostrarReservas" />
 </androidx.constraintlayout.widget.ConstraintLayout>
