--- a/app/src/main/res/layout/activity_iniciado.xml
+++ b/app/src/main/res/layout/activity_iniciado.xml
@@ -99,7 +99,7 @@
         android:id="@+id/btnEventos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="EventosLink"
+        android:onClick="GaleriaLink"
         android:text="Eventos"
         app:layout_constraintBottom_toTopOf="@+id/textView4"
         app:layout_constraintEnd_toEndOf="parent"
