--- a/app/src/main/res/layout/activity_send_images.xml
+++ b/app/src/main/res/layout/activity_send_images.xml
@@ -25,8 +25,8 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name" />
+        android:hint="Titulo (opcional)"
+        android:inputType="textPersonName" />
 
     <Button
         android:id="@+id/button_upload1"
