--- a/app/src/main/res/layout/image_item.xml
+++ b/app/src/main/res/layout/image_item.xml
@@ -13,17 +13,17 @@
             android:id="@+id/text_view_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:text="Name"
             android:textColor="@android:color/black"
             android:textSize="20sp"/>
 
-        <ImageView
+        <com.zolad.zoominimageview.ZoomInImageView
             android:id="@+id/image_view_upload"
             android:layout_width="match_parent"
-            android:layout_height="200dp"/>
+            android:layout_height="200dp"
+            />
 
 
     </LinearLayout>
